--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section id="contact">
         <h2>Contact Us</h2>
         <p>Phone: (123) 456-7890</p>
-        <p>Email: contact@ourbusiness.com</p>
+        <p>Email: rajayushhh@gmail.com</p>
        
     </section>
 
